<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_nav_view</name>
  <version>0.5.7</version>
  <description>rqt_nav_view provides a gui for viewing navigation maps and paths.</description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_nav_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_nav_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_nav_view/issues</url>

  <author>Ze'ev Klapow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>
