<package format="2">
  <name>rqt_nav_view</name>
  <version>0.5.8</version>
  <description>rqt_nav_view provides a gui for viewing navigation maps and paths.</description>

  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>
  <maintainer email="srishtidhm@gmail.com">Srishti Dhamija</maintainer>

  <author>Ze'ev Klapow</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_nav_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_nav_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_nav_view/issues</url>

  <exec_depend>ament_index_python</exec_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend version_gte="0.2.25">qt_gui_py_common</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
